--- a/ci/config.yml
+++ b/ci/config.yml
@@ -11,17 +11,14 @@ global:
     - ca-central-1
     - eu-central-1
     - eu-west-1
+    - eu-west-2
     - sa-east-1
     - us-east-1
     - us-east-2
     - us-west-1
     - us-west-2
   reporting: true
- 
 tests:
-  quickstart-enterprise-accelerator-cjist1:
-    parameter_input: quickstart-enterprise-accelerator-cjis-example-params1.json
-    template_file: quickstart-enterprise-accelerator-cjis-example1.template
-  quickstart-enterprise-accelerator-cjist2:
-    parameter_input: quickstart-enterprise-accelerator-cjis-example-params2.json
-    template_file: quickstart-enterprise-accelerator-cjis-example2.template
+  defaults:
+    parameter_input: defaults.json
+    template_file: main.template
