--- a/ci/config.yml
+++ b/ci/config.yml
@@ -3,13 +3,7 @@ global:
   owner: quickstart-eng@amazon.com
   qsname: quickstart-enterprise-accelerator-cjis
   regions:
-    - eu-west-1
-    - eu-west-2
-    - sa-east-1
-    - us-east-1
-    - us-east-2
-    - us-west-1
-    - us-west-2
+    - ap-southeast-1
   reporting: true
 tests:
   defaults:
