--- a/templates/application.template
+++ b/templates/application.template
@@ -155,6 +155,9 @@ Mappings:
   elbMap:
     us-gov-west-1:
       ELB: '048591011584'
+    # For CI use only. Do not use this outside us-gov-west-1 region
+    ap-southeast-1:
+      ELB: '114774131450'
 Conditions:
   IsGovCloud: !Equals [ !Ref 'AWS::Region', us-gov-west-1 ]
   SupportsGlacier: !Equals [ !Ref pSupportsGlacier, true ]
