--- a/templates/main.template
+++ b/templates/main.template
@@ -464,6 +464,9 @@ Outputs:
       !GetAtt
       - ApplicationTemplate
       - Outputs.WebsiteURL
+  SurveyLink:
+    Description: Please take a moment to complete the survey by clicking this link
+    Value: https://aws.au1.qualtrics.com/SE/?SID=SV_55sYYdtY1NhTTgN&qs=qs-1nrns188u
   Help:
     Description: For assistance or questions regarding this quickstart please email
       compliance-accelerator@amazon.com
